Modified the code to update choices for a given query, now the other wrong options are relatively closer to the correct answer.

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -41,7 +41,7 @@
             app:layout_row="0"
             app:layout_columnWeight="1"
             app:layout_rowWeight="1"
-            android:onClick="checkAnswer"
+            android:onClick="answerSelected"
             android:tag="0"
             android:text="Choice1"/>
 
@@ -53,7 +53,7 @@
             app:layout_row="0"
             app:layout_columnWeight="1"
             app:layout_rowWeight="1"
-            android:onClick="checkAnswer"
+            android:onClick="answerSelected"
             android:tag="1"
             android:text="Choice2" />
 
@@ -65,7 +65,7 @@
             app:layout_row="1"
             app:layout_columnWeight="1"
             app:layout_rowWeight="1"
-            android:onClick="checkAnswer"
+            android:onClick="answerSelected"
             android:tag="2"
             android:text="Choice3" />
 
@@ -77,7 +77,7 @@
             app:layout_row="1"
             app:layout_columnWeight="1"
             app:layout_rowWeight="1"
-            android:onClick="checkAnswer"
+            android:onClick="answerSelected"
             android:tag="3"
             android:text="Choice4" />
     </androidx.gridlayout.widget.GridLayout>
