--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/countDownGameModeConstraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GameActivity">
@@ -26,64 +27,68 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="96dp"
-        app:rowCount="2"
         app:columnCount="2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:rowCount="2">
 
         <Button
             android:id="@+id/choice0Button"
-            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            app:layout_column="0"
-            app:layout_row="0"
-            app:layout_columnWeight="1"
-            app:layout_rowWeight="1"
+            android:layout_height="wrap_content"
+            android:background="@android:color/holo_blue_bright"
             android:onClick="answerSelected"
             android:tag="0"
             android:text="1"
-            android:textSize="40sp"/>
+            android:textSize="40sp"
+            app:layout_column="0"
+            app:layout_columnWeight="1"
+            app:layout_row="0"
+            app:layout_rowWeight="1" />
 
         <Button
             android:id="@+id/choice1Button"
-            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            app:layout_column="1"
-            app:layout_row="0"
-            app:layout_columnWeight="1"
-            app:layout_rowWeight="1"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorError"
             android:onClick="answerSelected"
             android:tag="1"
             android:text="2"
-            android:textSize="40sp"/>
+            android:textSize="40sp"
+            app:layout_column="1"
+            app:layout_columnWeight="1"
+            app:layout_row="0"
+            app:layout_rowWeight="1" />
 
         <Button
             android:id="@+id/choice2Button"
-            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            app:layout_column="0"
-            app:layout_row="1"
-            app:layout_columnWeight="1"
-            app:layout_rowWeight="1"
+            android:layout_height="wrap_content"
+            android:background="?android:attr/colorPressedHighlight"
             android:onClick="answerSelected"
             android:tag="2"
             android:text="3"
-            android:textSize="40sp"/>
+            android:textSize="40sp"
+            app:layout_column="0"
+            app:layout_columnWeight="1"
+            app:layout_row="1"
+            app:layout_rowWeight="1" />
 
         <Button
             android:id="@+id/choice3Button"
-            android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            app:layout_column="1"
-            app:layout_row="1"
-            app:layout_columnWeight="1"
-            app:layout_rowWeight="1"
+            android:layout_height="wrap_content"
+            android:background="?attr/colorControlActivated"
             android:onClick="answerSelected"
             android:tag="3"
             android:text="4"
-            android:textSize="40sp"/>
+            android:textSize="40sp"
+            app:layout_column="1"
+            app:layout_columnWeight="1"
+            app:layout_row="1"
+            app:layout_rowWeight="1" />
     </androidx.gridlayout.widget.GridLayout>
 
     <TextView
@@ -106,8 +111,8 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="64dp"
         android:text="Question"
-        android:textSize="60sp"
         android:textColor="#000"
+        android:textSize="60sp"
         app:layout_constraintBottom_toTopOf="@+id/choicesGridLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -121,10 +126,10 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
-        android:text="END GAME"
-        android:onClick="gamePause"
         android:alpha="0.4"
         android:enabled="false"
+        android:onClick="gamePause"
+        android:text="END GAME"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
