--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,18 +6,74 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/startGameButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/colorAccent"
-        android:onClick="startGame"
-        android:padding="20dp"
-        android:text="START"
-        android:textSize="60sp"
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toTopOf="@+id/chooseGameModeGridLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/btn_star_big_on" />
+
+    <androidx.gridlayout.widget.GridLayout
+        android:id="@+id/chooseGameModeGridLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+
+        app:rowCount="3"
+        app:columnCount="1"
+
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="64dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView">
 
+        <Button
+            android:id="@+id/classicButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_rowWeight="1"
+            app:layout_columnWeight="1"
+            android:tag="CLASSIC"
+            android:text="CLASSIC"
+            android:textSize="20sp"
+            android:onClick="chooseDifficulty"
+            app:layout_column="0"
+            app:layout_row="0" />
+
+        <Button
+            android:id="@+id/arcadeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_rowWeight="1"
+            app:layout_columnWeight="1"
+            android:tag="ARCADE"
+            android:text="ARCADE"
+            android:textSize="20sp"
+            android:onClick="chooseDifficulty"
+            app:layout_column="0"
+            app:layout_row="1" />
+
+        <Button
+            android:id="@+id/countdownButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_rowWeight="1"
+            app:layout_columnWeight="1"
+            android:tag="COUNTDOWN"
+            android:text="COUNTDOWN"
+            android:textSize="20sp"
+            android:onClick="chooseDifficulty"
+            app:layout_column="0"
+            app:layout_row="2" />
+    </androidx.gridlayout.widget.GridLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
