--- a/app/src/main/res/drawable/pop_up_background.xml
+++ b/app/src/main/res/drawable/pop_up_background.xml
@@ -2,8 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:startColor="@color/colorAccent"
-        android:endColor="@color/colorPrimaryDark"/>
+        android:startColor="@color/powderBlue"
+        android:centerColor="@color/starCommandBlue"
+        android:endColor="@color/colorPrimaryDark"
+        android:angle="270"/>
 
     <corners
         android:radius="10dp"/>
