--- a/app/src/main/res/layout/activity_game_mode_selection.xml
+++ b/app/src/main/res/layout/activity_game_mode_selection.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/pop_up_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -15,7 +16,7 @@
         android:onClick="goToMainMenu"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/abc_vector_test" />
+        app:srcCompat="@drawable/ic_baseline_arrow_back_48" />
 
     <TextView
         android:id="@+id/gameModeTV"
@@ -60,6 +61,9 @@
         android:onClick="startGameButtonClicked"
         android:text="Start Game"
         android:textSize="20dp"
+        android:textColor="@color/colorAccent"
+        android:fontFamily="sans-serif-medium"
+        android:background="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
