--- a/app/src/main/res/layout/activity_pop_up.xml
+++ b/app/src/main/res/layout/activity_pop_up.xml
@@ -16,6 +16,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="32dp"
         android:fontFamily="sans-serif-condensed-medium"
+        android:textColor="#000"
         android:gravity="center"
         android:text="Game Paused"
         android:textSize="40sp"
@@ -81,8 +82,10 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:text="Continue"
-        android:fontFamily="sans-serif-condensed"
+        android:textColor="@color/colorAccent"
+        android:fontFamily="sans-serif-medium"
         android:onClick="continueGame"
+        android:background="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/restartGameButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -94,9 +97,11 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:fontFamily="sans-serif-condensed"
+        android:textColor="@color/colorAccent"
+        android:fontFamily="sans-serif-medium"
         android:onClick="restartGame"
         android:text="Restart"
+        android:background="@color/colorPrimary"
         app:layout_constraintBottom_toTopOf="@+id/goToMainMenuButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -110,7 +115,9 @@
         android:layout_marginBottom="16dp"
         android:onClick="goToMainMenu"
         android:text="Main Menu"
-        android:fontFamily="sans-serif-condensed"
+        android:textColor="@color/colorAccent"
+        android:fontFamily="sans-serif-medium"
+        android:background="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
