--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#E5E5E5</color>
+    <color name="colorPrimaryDark">#FFBA08</color>
+    <color name="colorAccent">#D90429</color>
+    <color name="powderBlue">#CAF0F8</color>
+    <color name="blizzardBlue">#ADE8F4</color>
+    <color name="skyBlueLight">#90E0EF</color>
+    <color name="skyBlueDark">#48CAE4</color>
+    <color name="ceruleanCrayola">#00B4D8</color>
+    <color name="blueGreen">#0096C7</color>
+    <color name="starCommandBlue">#0077B6</color>
+    <color name="darkCornflowerBlue">#023E8A</color>
+    <color name="navyBlue">#03045E</color>
 </resources>
