Now app doesn't quits if back button is pressed from game preview screen. Updated button layout with new colors and margins

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -38,25 +38,29 @@
             android:id="@+id/choice0Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@android:color/holo_blue_bright"
+            android:background="@color/navyBlue"
+            android:layout_margin="4dp"
             android:onClick="answerSelected"
             android:tag="0"
             android:text="1"
             android:textSize="40sp"
+            android:textColor="@color/colorPrimary"
             app:layout_column="0"
-            app:layout_row="0"
             app:layout_columnWeight="1"
+            app:layout_row="0"
             app:layout_rowWeight="1" />
 
         <Button
             android:id="@+id/choice1Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="?attr/colorError"
+            android:background="@color/darkCornflowerBlue"
+            android:layout_margin="4dp"
             android:onClick="answerSelected"
             android:tag="1"
             android:text="2"
             android:textSize="40sp"
+            android:textColor="@color/colorPrimary"
             app:layout_column="1"
             app:layout_columnWeight="1"
             app:layout_row="0"
@@ -66,11 +70,13 @@
             android:id="@+id/choice2Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="?android:attr/colorPressedHighlight"
+            android:background="@color/darkCornflowerBlue"
             android:onClick="answerSelected"
+            android:layout_margin="4dp"
             android:tag="2"
             android:text="3"
             android:textSize="40sp"
+            android:textColor="@color/colorPrimary"
             app:layout_column="0"
             app:layout_columnWeight="1"
             app:layout_row="1"
@@ -80,11 +86,13 @@
             android:id="@+id/choice3Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="?attr/colorControlActivated"
+            android:background="@color/navyBlue"
             android:onClick="answerSelected"
+            android:layout_margin="4dp"
             android:tag="3"
             android:text="4"
             android:textSize="40sp"
+            android:textColor="@color/colorPrimary"
             app:layout_column="1"
             app:layout_columnWeight="1"
             app:layout_row="1"
@@ -128,6 +136,10 @@
         android:layout_marginBottom="32dp"
         android:onClick="gamePause"
         android:text="Pause Game"
+
+        android:textSize="20sp"
+        android:textColor="@color/colorPrimary"
+        android:background="@color/blueGreen"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
