--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
             android:text="CLASSIC"
             android:layout_margin="8dp"
             android:textSize="20sp"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/navyBlue"
             android:fontFamily="sans-serif-medium"
             android:background="@color/colorPrimary"
             app:layout_column="0"
@@ -64,7 +64,7 @@
             android:text="ARCADE"
             android:layout_margin="8dp"
             android:textSize="20sp"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/navyBlue"
             android:fontFamily="sans-serif-medium"
             android:background="@color/colorPrimary"
             app:layout_column="0"
@@ -82,7 +82,7 @@
             android:layout_margin="8dp"
             android:textSize="20sp"
             app:layout_column="0"
-            android:textColor="@color/colorAccent"
+            android:textColor="@color/navyBlue"
             android:fontFamily="sans-serif-medium"
             android:background="@color/colorPrimary"
             app:layout_columnWeight="1"
