--- a/app/src/main/res/layout/activity_game_mode_selection.xml
+++ b/app/src/main/res/layout/activity_game_mode_selection.xml
@@ -61,7 +61,7 @@
         android:onClick="startGameButtonClicked"
         android:text="Start Game"
         android:textSize="20dp"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/darkCornflowerBlue"
         android:fontFamily="sans-serif-medium"
         android:background="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
