--- a/app/src/main/res/layout/activity_pop_up.xml
+++ b/app/src/main/res/layout/activity_pop_up.xml
@@ -82,7 +82,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
         android:text="Continue"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/navyBlue"
         android:fontFamily="sans-serif-medium"
         android:onClick="continueGame"
         android:background="@color/colorPrimary"
@@ -97,7 +97,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="16dp"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/navyBlue"
         android:fontFamily="sans-serif-medium"
         android:onClick="restartGame"
         android:text="Restart"
@@ -115,7 +115,7 @@
         android:layout_marginBottom="16dp"
         android:onClick="goToMainMenu"
         android:text="Main Menu"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/navyBlue"
         android:fontFamily="sans-serif-medium"
         android:background="@color/colorPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
